updated api.yaml
